--- a/package.json
+++ b/package.json
@@ -1,22 +1,31 @@
 {
   "name": "react-virtual-map",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "react": "*",
+    "react-dom": "*"
   },
+  "main": "src/react-virtual-map/index.js",
+  "files": [
+    "src/react-virtual-map/index.js"
+  ],
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "react-scripts start"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/meshya/react-virtual-map.git"
+  },
+  "bugs": {
+    "url": "https://github.com/meshya/react-virtual-map/issues"
+  },
+  "homepage": "https://github.com/meshya/react-virtual-map",
+  "keywords": [
+    "react",
+    "npm",
+    "map"
+  ],
   "eslintConfig": {
     "extends": [
       "react-app",
